<resources>
    <string name="app_name">Eta1</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="inputTextView_tip">input message here</string>
    <string name="sendButton_text">Send</string>
    <string name="auto_update">Auto Update</string>
    <string name="location_report">Location Report</string>
    <string name="now">Now</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="action_settings">Setting</string>
    <string name="pref_default_host">192.168.1.2</string>
    <string name="pref_default_port">4444</string>
    <string name="action_telnet">Telnet</string>
    <string name="host">host</string>
    <string name="port">port</string>
    <string name="title_activity_telnet">Telnet</string>
    <string name="msg_type_undefined">undefined</string>
    <string name="msg_type_client">Client</string>
    <string name="msg_type_server">Server</string>
    <string name="msg_type_error">ERROR</string>
    <string name="msg_type_info">INFO</string>
    <string name="no_data">No data</string>
    <string name="pref_telnetMode">Telnet mode</string>
    <string name="pref_telnetMode_default">Socket</string>
    <string name="action_reader">Reader</string>
    <string name="pref_default_next_card_font_size">22</string>
    <string name="pref_default_text_card_font_size">14</string>
    <string name="pref_list_order">Reverse Chapter List Order</string>
    <string name="order_desc">Descending</string>
    <string name="order.asc">Ascending</string>
    <string name="pref_default_indent" />
    <string name="pref_text_card_font_size">Text Card Font Size</string>
    <string name="pref_next_card_font_size">Next Card Font Size</string>
    <string name="pref_port">Port number</string>
    <string name="pref_host">Host address</string>
    <string name="pref_text_indent">Chapter Card Text Indent</string>
</resources>
