<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <EditTextPreference
        android:capitalize="none"
        android:defaultValue="@string/pref_default_host"
        android:inputType="text"
        android:key="pref_host"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="Host address" />
    <EditTextPreference
        android:capitalize="none"
        android:defaultValue="@string/pref_default_port"
        android:inputType="number"
        android:key="pref_port"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="Port number" />
    <ListPreference
        android:defaultValue="@string/pref_telnetMode_default"
        android:dialogTitle="@string/pref_telnetMode"
        android:entries="@array/pref_telnetMode_entries"
        android:entryValues="@array/pref_telnetMode_values"
        android:key="pref_telnetMode"
        android:title="@string/pref_telnetMode" />
    <EditTextPreference
        android:capitalize="none"
        android:defaultValue="@string/pref_default_next_card_font_size"
        android:inputType="number"
        android:key="pref_next_card_font_size"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="Next Card Font Size" />
    <EditTextPreference
        android:capitalize="none"
        android:defaultValue="@string/pref_default_text_card_font_size"
        android:inputType="number"
        android:key="pref_text_card_font_size"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="Text Card Font Size" />
    <CheckBoxPreference
        android:defaultValue="true"
        android:key="pref_list_order"
        android:title="@string/pref_list_order" />
</PreferenceScreen>